--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -119,6 +119,13 @@
 
     <div class="column">
       <img class="demo" src="../image/ANewDirection.jpg" onclick="currentSlide(2)" alt="A New Direction" style="width:50%">
+      <p><br><br><br>Gift of Sidney L. Delson. © Artist's Estate<br><br>
+
+        Delson was a painter and printmaker whose works reflected her exploration of nature and spiritual moods. <br>
+        Delson described her artistic philosophy this way: "Through painting and graphics I explore images to <br>
+        uncover the dynamic forces behind their appearance: emergence, growth, decay, metamorphosis. I try to capture <br>
+        the process of change in time and space, to crystallize a living moment and convey its vitality." These paintings, <br>
+        completed midway through her career, reflect her unique forms, energy, vibrant color, and light.</p>
     </div>
 
     <div class="column">
