--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -72,7 +72,8 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="../image/InMyGrandmasWorkshop.jpg" alt="En el taller de mi abuela (In my grandma’s workshop)" style="width:50%">
+      <img src="../image/InMyGrandmasWorkshop.jpg" alt="En el taller de mi abuela (In my grandma’s workshop)" style="width:50%" class="center">
+      <p><strong>En el taller de mi abuela (In my grandma’s workshop)</strong></p>
       <p><br><br><br><br><br><br>The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.<br><br>
       As a child, I often sat on the floor of my abuela Sara’s workshop while she was busy in the kitchen making <br>
       delicious meals. Her dressmaker’s workshop was her livelihood, but also my playground. Gathering strips of cloth, <br>
