--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -70,12 +70,12 @@
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
 
-    <div class="mySlides">
+    <div class="mySlides" style="background-color:black;">
       <div class="numbertext">1 / 4</div>
       <img src="../image/InMyGrandmasWorkshop.jpg" alt="En el taller de mi abuela (In my grandma’s workshop)" style="width:50%" class="center">
-      <p style="text-align:center;" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)</strong></p>
+      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)</strong></p>
       
-      <p class="demo" style="text-align:center;"><br><br><br>The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.<br><br>
+      <p class="demo" style="text-align:center;color:white"><br><br><br>The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.<br><br>
       As a child, I often sat on the floor of my abuela Sara’s workshop while she was busy in the kitchen making <br>
       delicious meals. Her dressmaker’s workshop was her livelihood, but also my playground. Gathering strips of cloth, <br>
       searching for interesting buttons, hiding under the worktable and pretending to disappear, the workshop invited me <br>
