--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -73,7 +73,7 @@
     <div class="mySlides" style="background-color:black;">
       <div class="numbertext">1 / 4</div>
       <img src="../image/InMyGrandmasWorkshop.jpg" alt="En el taller de mi abuela (In my grandma’s workshop)" style="width:50%" class="center">
-      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)</strong></p>
+      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br>Artist: Alberto Marcos Bursztyn (American)</strong></p>
       
       <p class="demo" style="text-align:center;color:white"><br><br><br>The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.<br><br>
       As a child, I often sat on the floor of my abuela Sara’s workshop while she was busy in the kitchen making <br>
@@ -92,7 +92,17 @@
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="../image/ANewDirection.jpg" style="width:50%">
+      <img src="../image/ANewDirection.jpg" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo"><strong>A New Direction(Marine Forms II)<br>Artist: Elizabeth Delson (American, 1932-2005)</strong></p>
+    
+      <p class="demo" style="text-align:center;color:white"><br><br><br>
+        Gift of Sidney L. Delson. © Artist's Estate<br>
+        Delson was a painter and printmaker whose works reflected her exploration of nature <br>
+        and spiritual moods. Delson described her artistic philosophy this way: "Through painting <br>
+        and graphics I explore images to uncover the dynamic forces behind their appearance: <br>
+        emergence, growth, decay, metamorphosis. I try to capture the process of change in time and space, <br>
+        to crystallize a living moment and convey its vitality." These paintings, completed midway <br>
+        through her career, reflect her unique forms, energy, vibrant color, and light.</p>
     </div>
 
     <div class="mySlides">
