--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -73,8 +73,8 @@
     <div class="mySlides" style="background-color:black;">
       <div class="numbertext">1 / 4</div>
       <img src="../image/InMyGrandmasWorkshop.jpg" alt="En el taller de mi abuela (In my grandma’s workshop)" style="width:50%" class="center">
-      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br>Artist: Alberto Marcos Bursztyn (American)</strong></p>
-      
+      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br><br>Artist: Alberto Marcos Bursztyn (American)</strong></p>
+      <p style="text-align:center;color:white"><strong>Date:</strong>2016</p>
       <p class="demo" style="text-align:center;color:white"><br><br><br>The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.<br><br>
       As a child, I often sat on the floor of my abuela Sara’s workshop while she was busy in the kitchen making <br>
       delicious meals. Her dressmaker’s workshop was her livelihood, but also my playground. Gathering strips of cloth, <br>
@@ -90,7 +90,7 @@
       reading of a major earthquake, a reminder of traumas that bind and contain a fragmented past.</p>
     </div>
 
-    <div class="mySlides">
+    <div class="mySlides" style="background-color:black;">
       <div class="numbertext">2 / 4</div>
       <img src="../image/ANewDirection.jpg" style="width:50%" class="center">
       <p style="text-align:center;color:white" class="demo"><strong>A New Direction(Marine Forms II)<br>Artist: Elizabeth Delson (American, 1932-2005)</strong></p>
@@ -105,12 +105,12 @@
         through her career, reflect her unique forms, energy, vibrant color, and light.</p>
     </div>
 
-    <div class="mySlides">
+    <div class="mySlides" style="background-color:black;">
       <div class="numbertext">3 / 4</div>
       <img src="../image/CelestialSpheres.jpg" style="width:50%">
     </div>
 
-    <div class="mySlides">
+    <div class="mySlides" style="background-color:black;">
       <div class="numbertext">4 / 4</div>
       <img src="../image/FireyFields.jpg" style="width:50%">
     </div>
