--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -177,6 +177,21 @@
       <!--!st Floor-->
       <div id="floor1"class="card">
         <h2>1st Floor</h2>
+         <!-- Images used to open the lightbox -->
+<div class="row2">
+  <div class="column">
+    <img src="../image/InMyGrandmasWorkshop.jpg" style="width:50%" onclick="openModal2();currentSlide(1)" class="hover-shadow2">
+  </div>
+  <div class="column">
+    <img src="../image/ANewDirection.jpg" style="width:50%" onclick="openModal2();currentSlide(2)" class="hover-shadow2">
+  </div>
+  <div class="column">
+    <img src="../image/CelestialSpheres.jpg" style="width:50%" onclick="openModal2();currentSlide(3)" class="hover-shadow2">
+  </div>
+  <div class="column">
+    <img src="../image/FireyFields.jpg" style="width:50%" onclick="openModal2();currentSlide(4)" class="hover-shadow2">
+  </div>
+</div>
       </div>
       <div id="floor2"class="card">
         <h2>2nd Floor</h2>
