--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -180,7 +180,7 @@
          <!-- Images used to open the lightbox -->
 <div class="row2">
   <div class="column">
-    <img src="../image/InMyGrandmasWorkshop.jpg" style="width:50%" onclick="openModal2();currentSlide(1)" class="hover-shadow2">
+    <img src="../image/Wallabout.jpg" style="width:50%" onclick="openModal2();currentSlide(1)" class="hover-shadow2">
   </div>
   <div class="column">
     <img src="../image/ANewDirection.jpg" style="width:50%" onclick="openModal2();currentSlide(2)" class="hover-shadow2">
