--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -183,7 +183,7 @@
     <img src="../image/Wallabout.jpg" style="width:50%" onclick="openModal2();currentSlide(1)" class="hover-shadow2">
   </div>
   <div class="column">
-    <img src="../image/ANewDirection.jpg" style="width:50%" onclick="openModal2();currentSlide(2)" class="hover-shadow2">
+    <img src="../image/PresidentVernon.jpg" style="width:50%" onclick="openModal2();currentSlide(2)" class="hover-shadow2">
   </div>
   <div class="column">
     <img src="../image/CelestialSpheres.jpg" style="width:50%" onclick="openModal2();currentSlide(3)" class="hover-shadow2">
