--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -186,12 +186,42 @@
     <img src="../image/PresidentVernon.jpg" style="width:50%" onclick="openModal2();currentSlide(2)" class="hover-shadow2">
   </div>
   <div class="column">
-    <img src="../image/CelestialSpheres.jpg" style="width:50%" onclick="openModal2();currentSlide(3)" class="hover-shadow2">
+    <img src="../image/Blinded.jpg" style="width:50%" onclick="openModal2();currentSlide(3)" class="hover-shadow2">
   </div>
   <div class="column">
-    <img src="../image/FireyFields.jpg" style="width:50%" onclick="openModal2();currentSlide(4)" class="hover-shadow2">
+    <img src="../image/EchoingFactors.jpg" style="width:50%" onclick="openModal2();currentSlide(4)" class="hover-shadow2">
   </div>
 </div>
+        
+      <!-- The Modal/Lightbox -->
+<div id="myModal2" class="modal">
+  <span class="close cursor" onclick="closeModal2()">&times;</span>
+  <div class="modal-content">
+
+    <div class="mySlides2" style="background-color:black;">
+      <div class="numbertext2">1 / 4</div>
+      <img src="../image/InMyGrandmasWorkshop.jpg" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo2"><strong>The Wallabout Market<br>
+        Artist:</strong> 	R. Adams<br>
+        <strong>Date:</strong>	1930s<br>
+        <strong>Medium:</strong>	Watercolor<br>
+        <strong>Size:</strong>	20" x 57"<br>
+        <strong>Location:</strong>	First floor<br>
+        <strong>Provenance:</strong>	The Brooklyn College Library Collection. © Artist's Estate
+      </p>
+  
+      <p class="demo" style="text-align:center;color:white"><br><br><br>
+        The Brooklyn College Library Collection. © Artist's Estate<br>
+        In 1637, Joris Jansen de Rapelje, the father of the first European baby born in New York, <br>
+        purchased 335 acres of land in Brooklyn. In the late 1800s, part of this land became the <br>
+        Wallabout Market, an enormous wholesale market that sold produce from local farms. The <br>
+        market's buildings were Dutch-style two-story structures with stepped gables.<br><br>
+
+        The market was demolished during World War II, when the U.S. government needed the <br>
+        land to expand the Brooklyn Navy Yard.
+      </p>  
+    </div>
+        
       </div>
       <div id="floor2"class="card">
         <h2>2nd Floor</h2>
