--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -192,9 +192,9 @@
 </div>
         
       <!-- The Modal/Lightbox -->
-<div id="myModal2" class="modal">
+<div id="myModal2" class="modal2">
   <span class="close cursor" onclick="closeModal2()">&times;</span>
-  <div class="modal-content">
+  <div class="modal-content2">
 
     <div class="mySlides2" style="background-color:black;">
       <div class="numbertext2">1 / 4</div>
@@ -218,7 +218,7 @@
         The market was demolished during World War II, when the U.S. government needed the <br>
         land to expand the Brooklyn Navy Yard.
       </p>  
-      
+    </div>
           <!-- Next/previous controls -->
     <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides2(1)">&#10095;</a>
