--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -178,16 +178,16 @@
          <!-- Images used to open the lightbox -->
 <div class="row2">
   <div class="column">
-    <img src="../image/Wallabout.jpg" style="width:50%" onclick="openModal2();currentSlide(1)" class="hover-shadow2">
+    <img src="../image/Wallabout.jpg" style="width:50%" onclick="openModal2();currentSlide2(1)" class="hover-shadow2">
   </div>
   <div class="column">
-    <img src="../image/PresidentVernon.jpg" style="width:50%" onclick="openModal2();currentSlide(2)" class="hover-shadow2">
+    <img src="../image/PresidentVernon.jpg" style="width:50%" onclick="openModal2();currentSlide2(2)" class="hover-shadow2">
   </div>
   <div class="column">
-    <img src="../image/Blinded.jpg" style="width:50%" onclick="openModal2();currentSlide(3)" class="hover-shadow2">
+    <img src="../image/Blinded.jpg" style="width:50%" onclick="openModal2();currentSlide2(3)" class="hover-shadow2">
   </div>
   <div class="column">
-    <img src="../image/EchoingFactors.jpg" style="width:50%" onclick="openModal2();currentSlide(4)" class="hover-shadow2">
+    <img src="../image/EchoingFactors.jpg" style="width:50%" onclick="openModal2();currentSlide2(4)" class="hover-shadow2">
   </div>
 </div>
         
