--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Info</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/info.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="image/icon/paint_palette.png" type="image/png" sizes="16x16">
 </head>
 
