--- a/info.html
+++ b/info.html
@@ -47,7 +47,7 @@
   <!--Card with info 2-->   
   <!--Left Side-->
   <div class="row">
-    <div class="leftcolumn3">
+    <div class="leftcolumn">
         <div class="card">   
           <a href="http://www.brooklyn.cuny.edu/web/home.php">Where To Find Brooklyn College</a>
           <br><br>
@@ -55,7 +55,7 @@
         </div>   
     </div>
     <!--Right side-->
-    <div class="rightcolumn3">
+    <div class="rightcolumn">
       <div class="card">   
         <a href="https://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/departments/library.php">Where To Find Us</a>
         <br><br>
