--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -175,6 +175,23 @@
       <!--1st Floor-->
       <div id="floor1"class="card">
         <h2>1st Floor</h2>
+       <!-- Images used to open the lightbox -->
+<div class="row2">
+  <div class="column">
+    <img src="../image/Wallabout.jpg" style="width:50%" onclick="openModal2();currentSlide2(1)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img src="../image/Blinded.jpg" style="width:50%" onclick="openModal2();currentSlide2(2)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img src="../image/EchoingFactors.jpg" style="width:50%" onclick="openModal2();currentSlide2(3)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img src="../image/FireyFields.jpg" style="width:50%" onclick="openModal2();currentSlide2(4)" class="hover-shadow">
+  </div>
+</div>
+        
+        
       </div>
   
       <div id="floor2"class="card">
