--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -208,7 +208,7 @@
         <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.
       </p>
   
-      <p class="demo" style="text-align:center;color:white"><br><br><br>
+      <p class="demo2" style="text-align:center;color:white"><br><br><br>
       </p>
     </div>
         
