--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -197,7 +197,7 @@
   <div class="modal-content">
 
     <div class="mySlides2" style="background-color:black;">
-      <div class="numbertext">5 / 8</div>
+      <div class="numbertext">1 / 4</div>
       <img src="../image/Wallabout.jpg" alt="Wallabout" style="width:50%" class="center">
       <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br>
         Artist:</strong> Alberto Marcos Bursztyn (American)<br>
@@ -211,6 +211,52 @@
       <p class="demo2" style="text-align:center;color:white"><br><br><br>
       </p>
     </div>
+        <div class="mySlides2" style="background-color:black;">
+      <div class="numbertext">2 / 4</div>
+      <img src="../image/Blinded.jpg" alt="Blinded" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br>
+        Artist:</strong> Alberto Marcos Bursztyn (American)<br>
+        <strong>Date:</strong>	2016<br>
+        <strong>Medium:</strong>	Mixed media<br>
+        <strong>Size:</strong>	n/a<br>
+        <strong>Location:</strong>	Lower level<br>
+        <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.
+      </p>
+  
+      <p class="demo2" style="text-align:center;color:white"><br><br><br>
+      </p>
+    </div>
+        <div class="mySlides2" style="background-color:black;">
+      <div class="numbertext">3 / 4</div>
+      <img src="../image/EchoingFactors.jpg" alt="EchoingFactors" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br>
+        Artist:</strong> Alberto Marcos Bursztyn (American)<br>
+        <strong>Date:</strong>	2016<br>
+        <strong>Medium:</strong>	Mixed media<br>
+        <strong>Size:</strong>	n/a<br>
+        <strong>Location:</strong>	Lower level<br>
+        <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.
+      </p>
+  
+      <p class="demo2" style="text-align:center;color:white"><br><br><br>
+      </p>
+    </div>
+        <div class="mySlides2" style="background-color:black;">
+      <div class="numbertext">4 / 4</div>
+      <img src="../image/DancingCouple.jpg" alt="DancingCouple" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br>
+        Artist:</strong> Alberto Marcos Bursztyn (American)<br>
+        <strong>Date:</strong>	2016<br>
+        <strong>Medium:</strong>	Mixed media<br>
+        <strong>Size:</strong>	n/a<br>
+        <strong>Location:</strong>	Lower level<br>
+        <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.
+      </p>
+  
+      <p class="demo2" style="text-align:center;color:white"><br><br><br>
+      </p>
+    </div>
+    
         
          <!-- Next/previous controls -->
     <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
