--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -202,7 +202,7 @@
       <p style="text-align:center;color:white" class="demo"><strong>The Wallabout Market<br>
         Artist:</strong>R. Adams<br>
         <audio controls>
-        <source src="R.Adams.mp3" type="audio/mpeg"><br>
+        <source src="R.Adams.mp3" type="audio/mpeg"><br><br>
         </audio>
         <strong>Date:</strong>	1930s<br>
         <strong>Medium:</strong> Watercolor<br>
