--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -202,8 +202,8 @@
       <p style="text-align:center;color:white" class="demo"><strong>The Wallabout Market<br>
         Artist:</strong>R. Adams<br>
         <audio controls>
-        <source src="R.Adams.mp3" type="audio/mpeg"><br><br>
-        </audio>
+        <source src="R.Adams.mp3" type="audio/mpeg">
+        </audio><br><br>
         <strong>Date:</strong>	1930s<br>
         <strong>Medium:</strong> Watercolor<br>
         <strong>Size:</strong>	20" x 57"<br>
