--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -202,7 +202,7 @@
       <p style="text-align:center;color:white" class="demo"><strong>The Wallabout Market<br>
         Artist:</strong>R. Adams<br>
         <audio controls>
-        <source src="RAdams.mp3" type="audio/mpeg">
+        <source src="RAdams.mp3" type="audio/mpeg"/>
         </audio><br>
         <strong>Date:</strong>	1930s<br>
         <strong>Medium:</strong> Watercolor<br>
@@ -285,7 +285,9 @@
       <img src="../image/DancingCouple.jpg" alt="DancingCouple" style="width:50%" class="center">
       <p style="text-align:center;color:white" class="demo">Dancing Couple<br>
         Artist:</strong> William Kentridge (South African, b. 1955)<br>
+        <audio controls>
         <source src="WilliamKentridgeDancingCouple.mp3" type="audio/mpeg">
+        </audio><br>
         <strong>Date:</strong>	2003<br>
         <strong>Medium:</strong>	Offset lithograph<br>
         <strong>Size:</strong>		73" x 51"<br>
