--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -348,8 +348,8 @@
       </p>
   </div>
            <!-- Next/previous controls -->
-    <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides2(1)">&#10095;</a>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
     
     </div>
   </div> 
