--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -317,24 +317,24 @@
            <!-- Images used to open the lightbox -->
 <div class="row2">
   <div class="column">
-    <img src="../image/DinahWashington.jpg" style="width:50%" onclick="openModal();currentSlide(9)" class="hover-shadow">
+    <img src="../image/DinahWashington.jpg" style="width:50%" onclick="openModal3();currentSlide3(9)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/ANewDirection.jpg" style="width:50%" onclick="openModal();currentSlide(10)" class="hover-shadow">
+    <img src="../image/ANewDirection.jpg" style="width:50%" onclick="openModal3();currentSlide3(10)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/CelestialSpheres.jpg" style="width:50%" onclick="openModal();currentSlide(11)" class="hover-shadow">
+    <img src="../image/CelestialSpheres.jpg" style="width:50%" onclick="openModal3();currentSlide3(11)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/FireyFields.jpg" style="width:50%" onclick="openModal();currentSlide(12)" class="hover-shadow">
+    <img src="../image/FireyFields.jpg" style="width:50%" onclick="openModal3();currentSlide3(12)" class="hover-shadow">
   </div>
 </div>
      <!-- The Modal/Lightbox -->
-<div id="myModal" class="modal">
-  <span class="close cursor" onclick="closeModal()">&times;</span>
+<div id="myModal3" class="modal">
+  <span class="close cursor" onclick="closeModal3()">&times;</span>
   <div class="modal-content">
 
-    <div class="mySlides" style="background-color:black;">
+    <div class="mySlides3" style="background-color:black;">
       <div class="numbertext">1 / 4</div>
       <img src="../image/DinahWashington.jpg" alt="Dinah Washington" style="width:50%" class="center">
       <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br>
@@ -348,8 +348,8 @@
       </p>
   </div>
            <!-- Next/previous controls -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <a class="prev" onclick="plusSlides3(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides3(1)">&#10095;</a>
     
     </div>
   </div> 
