--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -320,13 +320,16 @@
     <img src="../image/DinahWashington.jpg" style="width:50%" onclick="openModal3();currentSlide3(9)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/ANewDirection.jpg" style="width:50%" onclick="openModal3();currentSlide3(10)" class="hover-shadow">
+    <img src="../image/BigPaint.jpg" style="width:50%" onclick="openModal3();currentSlide3(10)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/CelestialSpheres.jpg" style="width:50%" onclick="openModal3();currentSlide3(11)" class="hover-shadow">
+    <img src="../image/firefighters.jfif" style="width:50%" onclick="openModal3();currentSlide3(11)" class="hover-shadow">
   </div>
   <div class="column">
-    <img src="../image/FireyFields.jpg" style="width:50%" onclick="openModal3();currentSlide3(12)" class="hover-shadow">
+    <img src="../image/Cones.jpg" style="width:50%" onclick="openModal3();currentSlide3(12)" class="hover-shadow">
+  </div>
+    <div class="column">
+    <img src="../image/ClammersMarksNorthBranch.jpg" style="width:50%" onclick="openModal3();currentSlide3(13)" class="hover-shadow">
   </div>
 </div>
      <!-- The Modal/Lightbox -->
@@ -335,16 +338,102 @@
   <div class="modal-content">
 
     <div class="mySlides3" style="background-color:black;">
-      <div class="numbertext">1 / 4</div>
+      <div class="numbertext">1 / 5</div>
       <img src="../image/DinahWashington.jpg" alt="Dinah Washington" style="width:50%" class="center">
-      <p style="text-align:center;color:white" class="demo"><strong>En el taller de mi abuela (In my grandma’s workshop)<br>
-        Artist:</strong> Alberto Marcos Bursztyn (American)<br>
-        <strong>Date:</strong>	2016<br>
-        <strong>Medium:</strong>	Mixed media<br>
-        <strong>Size:</strong>	n/a<br>
-        <strong>Location:</strong>	Lower level<br>
-        <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift of Alberto Marcos Bursztyn.
+      <p style="text-align:center;color:white" class="demo"><strong>Dinah Washington<br>
+        Artist:</strong> Archie Rand (American, b.1949)<br>
+        <strong>Date:</strong>		1970<br>
+        <strong>Medium:</strong>	Acrylic and enamel on canvas<br>
+        <strong>Size:</strong>	18" x 72"<br>
+        <strong>Location:</strong>	Second floor<br>
+        <strong>Provenance:</strong>	On loan from artist. © Archie Rand
       </p>
+      On loan from artist. © Archie Rand
+      </p>
+  </div>
+  
+    <div class="mySlides3" style="background-color:black;">
+      <div class="numbertext">2 / 5</div>
+      <img src="../image/BigPaint.jpg" alt="Wall" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo"><strong>Wall<br>
+        Artist:</strong> Slava Polishchuk (Russian (Immigrated to the United States in 1996), b. 1961)<br>
+        <strong>Date:</strong>		2002<br>
+        <strong>Medium:</strong>	Oil and paper on canvas<br>
+        <strong>Size:</strong>	90" x 448"<br>
+        <strong>Location:</strong>	Second floor<br>
+        <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift of Slava Polishchuk. © Slava Polishchuk
+      </p>
+      The Brooklyn College Library Collection. Gift of Slava Polishchuk. © Slava Polishchuk<br><br>
+
+      Human suffering and its inevitability has long been a theme in Polishchuk's work. <br>
+      Inspired by Jeremiah's Lament in the Bible, this work has a box-within-a-box motif <br>
+      that echoes the rhythmic and repetitive phrasing of Jeremiah's text. Polishchuk states:<br>
+      "Repetition is similar to the idea of memory, which is essentially an endless repetition <br>
+      of something that once happened . . . all we have in our struggle against time is memory."<br><br>
+
+      An arresting canvas, this mural-like painting combines 10 to 15 coats of paint with <br>
+      Japanese paper, creating innumerable hues of black and white as well as rich and haunting textures.<br>
+      </p>
+  </div>
+        
+    <div class="mySlides3" style="background-color:black;">
+      <div class="numbertext">3 / 5</div>
+      <img src="../image/firefighters.jfif" alt="FireFighters" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo"><strong>	Gerard Siani and Greg Saucedo<br>
+        Artist:</strong> Doug Schwab<br>
+        <strong>Date:</strong>	2000<br>
+        <strong>Medium:</strong>	Platinum-palladium print<br>
+        <strong>Size:</strong>	18" x 72"<br>
+        <strong>Location:</strong>	Second floor<br>
+        <strong>Provenance:</strong>	On loan from artist. © Doug Schwab
+      </p>
+      On loan from artist. © Doug Schwab
+      </p>
+  </div>
+    <div class="mySlides3" style="background-color:black;">
+      <div class="numbertext">4 / 5</div>
+      <img src="../image/Cones.jpg" alt="Cones" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo"><strong>Cones<br>
+        Artist:</strong> 	A. Dodina, S. Polishchuk (Russian)<br>
+        <strong>Date:</strong>			2003<br>
+        <strong>Medium:</strong>	Oil/mixed media on canvas<br>
+        <strong>Size:</strong>	100" x 116"<br>
+        <strong>Location:</strong>	Second floor<br>
+        <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift from the artists in honor of Professor Anthony Cucchiara
+      </p>
+        The Brooklyn College Library Collection. Gift from the artists in honor of Professor Anthony Cucchiara<br><br>
+
+        Two artists, in collaboration, have combined these natural shapes, cones and shells. <br>
+        The interconnections, the twists and turns of these shapes with one another, seem to <br>
+        reflect the very essence of human relationships. The scale and interplay of the shapes <br>
+        are enhanced by the use of paper and textiles, which imbue the painting with a rich, <br>
+        powerful texture and feeling.<br>
+      </p>
+  </div>
+  
+  <div class="mySlides3" style="background-color:black;">
+     <div class="numbertext">5 / 5</div>
+      <img src="../image/ClammersMarksNorthBranch.jpg" alt="Clammer's Marks, North Branch" style="width:50%" class="center">
+      <p style="text-align:center;color:white" class="demo"><strong>Clammer's Marks, North Branch<br>
+        Artist:</strong> 	John Walker (British, b. 1939)<br>
+        <strong>Date:</strong>			2003<br>
+        <strong>Medium:</strong>	Oil and mixed media on linen<br>
+        <strong>Size:</strong>	96" x 84"<br>
+        <strong>Location:</strong>	Second floor<br>
+        <strong>Provenance:</strong>	The Brooklyn College Library Collection. Purchased with Dormitory <br>
+        Authority of New York Art Acquisition Funds. © John Walker<br>
+      </p>
+       The Brooklyn College Library Collection. Purchased with Dormitory <br>
+       Authority of New York Art Acquisition Funds. © John Walker<br><br>
+
+       John Walker captures the ebb, flow, and changing light of a muddy <br>
+       cove near his home in Maine. His expressive brush strokes, dynamic composition, <br>
+       and freedom of execution evoke the feeling of a swirling tidal pool. Walker's combination <br>
+       of materials, including mud, sand, and oil, creates gritty yet luminous textures. <br>
+       Explaining his use of these organic materials, Walker states: "It seemed obvious to <br>
+       get a bucket of [mud] and mix it in with the paint, to get the feel for how the tide <br>
+       comes in and out and the patterns that are caused by that constant changing tide <br>
+       on that particular cove where I work."<br>
       </p>
   </div>
            <!-- Next/previous controls -->
