--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -333,9 +333,9 @@
   </div>
 </div>
      <!-- The Modal/Lightbox -->
-<div id="myModal3" class="modal">
+<div id="myModal3" class="modal3">
   <span class="close cursor" onclick="closeModal3()">&times;</span>
-  <div class="modal-content">
+  <div class="modal-content3">
 
     <div class="mySlides3" style="background-color:black;">
       <div class="numbertext">1 / 5</div>
@@ -348,8 +348,8 @@
         <strong>Location:</strong>	Second floor<br>
         <strong>Provenance:</strong>	On loan from artist. © Archie Rand
       </p>
-      <p>
-      On loan from artist. © Archie Rand
+      <p class="demo3" style="text-align:center;color:white"><br><br><br>
+        On loan from artist. © Archie Rand
       </p>
   </div>
   
@@ -364,7 +364,7 @@
         <strong>Location:</strong>	Second floor<br>
         <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift of Slava Polishchuk. © Slava Polishchuk
       </p>
-      <p>
+      <p class="demo3" style="text-align:center;color:white"><br><br><br>
       The Brooklyn College Library Collection. Gift of Slava Polishchuk. © Slava Polishchuk<br><br>
 
       Human suffering and its inevitability has long been a theme in Polishchuk's work. <br>
@@ -389,7 +389,7 @@
         <strong>Location:</strong>	Second floor<br>
         <strong>Provenance:</strong>	On loan from artist. © Doug Schwab
       </p>
-      <p>
+      <p class="demo3" style="text-align:center;color:white"><br><br><br>
          On loan from artist. © Doug Schwab
       </p>
   </div>
@@ -404,7 +404,7 @@
         <strong>Location:</strong>	Second floor<br>
         <strong>Provenance:</strong>	The Brooklyn College Library Collection. Gift from the artists in honor of Professor Anthony Cucchiara
       </p>
-      <p>
+      <p class="demo3" style="text-align:center;color:white"><br><br><br>
         The Brooklyn College Library Collection. Gift from the artists in honor of Professor Anthony Cucchiara<br><br>
 
         Two artists, in collaboration, have combined these natural shapes, cones and shells. <br>
@@ -427,7 +427,7 @@
         <strong>Provenance:</strong>	The Brooklyn College Library Collection. Purchased with Dormitory <br>
         Authority of New York Art Acquisition Funds. © John Walker<br>
       </p>
-      <p>
+      <p class="demo3" style="text-align:center;color:white"><br><br><br>
        The Brooklyn College Library Collection. Purchased with Dormitory <br>
        Authority of New York Art Acquisition Funds. © John Walker<br><br>
 
