Added new floors

--- a/directory.html
+++ b/directory.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Brooklyn College Student Art Directory</h1>
+    <h1>Brooklyn College Art Directory</h1>
   </div>
   <!--Navigation bar-->
   <div>
@@ -59,6 +59,7 @@
       </div>
       <div class="card">
         <center><h1>Brooklyn College Map</h1></center>
+        <center><h2><i>*This map is clickable*</i></h2></center>
         <center>
           <img src="image/bc_map.png" alt="Brooklyn College Map" usemap="#bcmap" width="90%" height="auto">
           <map name="bcmap">
