--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     
   <div class="header">
-    <h1>Brooklyn College Student Art Directory</h1>
+    <h1>Brooklyn College Art Directory</h1>
   </div>  
 
   <!--Navigation bar-->
