--- a/info.html
+++ b/info.html
@@ -64,6 +64,7 @@
 
   <!--Footer-->
   <div class="footer">
+    <div class="card">
     <p>
       <strong>Contact Information</strong>
       <br>
@@ -76,6 +77,7 @@
       <strong>Fax:</strong> 718.951.4557</p>
       <br>
     </p>
+  </div>
     <input class="button"type="button"value="Help" onclick="location.href='info.html'">
   </div>
 
