--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
   </div>
       
-  <!-- 3 Images seperated-->
+  <!-- 4 Images seperated-->
   <div class="row">
     <!-- 1 image-->
     <div class="leftcolumn2">
@@ -123,6 +123,7 @@
       <div class="card">
         <p><strong>The Wallabout Market</strong></p>
         <p>R. Adams<br>1st Floor</p>
+        <a href="laguardia_hall.html">Visit our HTML tutorial</a>
       </div>
     </div>
 
@@ -151,7 +152,7 @@
       </div>
     </div>
 
-    <!--3 image-->
+    <!--4 image-->
     <div class="rightcolumn2">
       <div class="card">
         <img src="image/EchoingFactors.jpg" alt="comingSoon" width="250" height="300">
