--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="image/DancingCouple.jpg" alt="comingSoon" style="width:50%;">
+        <a href= "laguardia_hall_library.html">
+        <img src="image/DancingCouple.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Dancing Couple</h3>
           <p>William Kentridge<br>1st Floor</p>
@@ -123,7 +124,7 @@
       <div class="card">
         <p><strong>The Wallabout Market</strong></p>
         <p>R. Adams<br>1st Floor</p>
-        <a href="laguardia_hall.html">Visit our HTML tutorial</a>
+        <p><a href="laguardia_hall_library.html">Where you can find this painting</a></p>
       </div>
     </div>
 
@@ -137,6 +138,7 @@
       <div class="card">
         <p><strong>The Blind Leading the Blind</strong></p>
         <p>John Arruda<br>1st Floor</p>
+        <p><a href="laguardia_hall_library.html">Where you can find this painting</a></p>
       </div>
     </div>
 
@@ -149,6 +151,7 @@
       <div class="card">
         <p><strong>Aspen</strong></p>
         <p>Harold Baumbach<br>4th Floor</p>
+        <p><a href="laguardia_hall_library.html">Where you can find this painting</a></p>
       </div>
     </div>
 
@@ -161,6 +164,7 @@
       <div class="card">
         <p><strong>Echoing Factors</strong></p>
         <p>Chakaia Booker<br>1st Floor</p>
+        <p><a href="laguardia_hall_library.html">Where you can find this painting</a></p>
       </div>
     </div>
   </div>
