--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a href= "laguardia_hall_library.html">
+        <a href= "directory/laguardia_hall_library.html">
         <img src="image/DancingCouple.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Dancing Couple</h3>
