--- a/index.html
+++ b/index.html
@@ -53,35 +53,40 @@
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/Typewriter.jpg" alt="comingSoon" style="width:50%;">
+        <a href= "directory/laguardia_hall_library.html">
+        <img src="image/Typewriter.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Typewriter</h3>
           <p>William Kentridge<br>1st Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/RiversEdge.jpg" alt="comingSoon" style="width:50%;">
+        <a href= "directory/laguardia_hall_library.html">
+        <img src="image/RiversEdge.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>River's Edge</h3>
           <p>Jim Lee<br>4th Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/Neptune.jpg" alt="comingSoon" style="width:50%;">
+        <a href= "directory/laguardia_hall_library.html">
+        <img src="image/Neptune.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Neptune(detail);Bailey Fountain,Brooklyn,NY</h3>
           <p>Richard Lord<br>Basement</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="image/Autumn.jpg" alt="comingSoon" style="width:50%;">
+        <a href= "directory/laguardia_hall_library.html">
+        <img src="image/Autumn.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Autumn</h3>
           <p>Alfred Russel<br>3rd Floor</p>
         </div>   
       </div>
        <div class="carousel-item">
-        <img src="image/MusicalMermaid.jpg" alt="comingSoon" style="width:50%;">
+         <a href= "directory/laguardia_hall_library.html">
+         <img src="image/MusicalMermaid.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>The Musical Mermaid</h3>
           <p>Anthony G. Gennarelli<br>Basement</p>
@@ -124,7 +129,7 @@
       <div class="card">
         <p><strong>The Wallabout Market</strong></p>
         <p>R. Adams<br>1st Floor</p>
-        <p><a href="laguardia_hall_library.html">Where you can find this painting</a></p>
+        <p><a href="directory/laguardia_hall_library.html">Where you can find this painting</a></p>
       </div>
     </div>
 
@@ -138,7 +143,7 @@
       <div class="card">
         <p><strong>The Blind Leading the Blind</strong></p>
         <p>John Arruda<br>1st Floor</p>
-        <p><a href="laguardia_hall_library.html">Where you can find this painting</a></p>
+        <p><a href="directory/laguardia_hall_library.html">Where you can find this painting</a></p>
       </div>
     </div>
 
@@ -151,7 +156,7 @@
       <div class="card">
         <p><strong>Aspen</strong></p>
         <p>Harold Baumbach<br>4th Floor</p>
-        <p><a href="laguardia_hall_library.html">Where you can find this painting</a></p>
+        <p><a href="directory/laguardia_hall_library.html">Where you can find this painting</a></p>
       </div>
     </div>
 
@@ -164,7 +169,7 @@
       <div class="card">
         <p><strong>Echoing Factors</strong></p>
         <p>Chakaia Booker<br>1st Floor</p>
-        <p><a href="laguardia_hall_library.html">Where you can find this painting</a></p>
+        <p><a href="directory/laguardia_hall_library.html">Where you can find this painting</a></p>
       </div>
     </div>
   </div>
