--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -106,7 +106,7 @@
             <div class="mySlides" style="background-color:black;">
                 <div class="numbertext">2 / 4</div>
                 <img src="../image/ANewDirection.jpg" style="width:50%" class="center">
-                <p style="color:white"><strong>A New Direction(Marine Forms II)</strong><h1>
+                <h1 style="color:white"><strong>A New Direction(Marine Forms II)</strong></h1>
                 <p style="color:white;" class="demo">
                 <strong>Artist:</strong> Elizabeth Delson (American, 1932-2005)<br>
                 <strong>Date:</strong>	1974<br>
@@ -130,7 +130,7 @@
             <div class="mySlides" style="background-color:black;">
                  <div class="numbertext">3 / 4</div>
                  <img src="../image/CelestialSpheres.jpg" style="width:50%" class="center">
-                 <h1 style="color:white"><strong>Celestial Spheres</strong><h1>
+                 <h1 style="color:white"><strong>Celestial Spheres</strong></h1>
                  <p style="color:white;" class="demo">
                  <strong>Artist:</strong> Elizabeth Delson (American, 1932-2005)<br>
                  <strong>Date:</strong>	1974<br>
@@ -153,7 +153,7 @@
             <div class="mySlides" style="background-color:black;">
                  <div class="numbertext">4 / 4</div>
                  <img src="../image/FireyFields.jpg" style="width:50%" class="center">
-                 <h1 style="color:white"><strong>Fiery Fields</strong><h1>
+                 <h1 style="color:white"><strong>Fiery Fields</strong></h1>
                  <p style="color:white;" class="demo">
                  <strong>Artist:</strong> Elizabeth Delson (American, 1932-2005)<br>
                  <strong>Date:</strong>	1968<br>
@@ -207,7 +207,7 @@
     <div class="mySlides2" style="background-color:black;">
         <div class="numbertext">1 / 4</div>
         <img src="../image/Wallabout.jpg" alt="Wallabout" style="width:50%" class="center">
-        <h1 style="color:white"><strong>The Wallabout Market</strong><h1>
+        <h1 style="color:white"><strong>The Wallabout Market</strong></h1>
         <p style="color:white;" class="demo3">
         <strong>Artist:</strong>R. Adams<br>
         <strong>Date:</strong>	1930s<br>
@@ -233,7 +233,7 @@
     <div class="mySlides2" style="background-color:black;">
          <div class="numbertext">2 / 4</div>
          <img src="../image/Blinded.jpg" alt="Blinded" style="width:50%" class="center">
-         <h1 style="color:white"><strong>The Blind Leading the Blind</strong><h1>
+         <h1 style="color:white"><strong>The Blind Leading the Blind</strong></h1>
          <p style="color:white;" class="demo2">
          <strong>Artist:</strong>	John Arruda (American, b. 1947)<br>
          <strong>Date:</strong>	1993<br>
@@ -259,7 +259,7 @@
     <div class="mySlides2" style="background-color:black;">
         <div class="numbertext">3 / 4</div>
         <img src="../image/EchoingFactors.jpg" alt="EchoingFactors" style="width:50%" class="center">
-        <h1 style="color:white"><strong>Echoing Factors</strong><h1>
+        <h1 style="color:white"><strong>Echoing Factors</strong></h1>
         <p style="color:white;" class="demo2">
         <strong>Artist:</strong>Chakaia Booker (American, b. 1953)<br>
         <strong>Date:</strong>	2004<br>
@@ -287,7 +287,7 @@
       <div class="mySlides2" style="background-color:black;">
         <div class="numbertext">4 / 4</div>
         <img src="../image/DancingCouple.jpg" alt="DancingCouple" style="width:50%" class="center">
-        <h1 style="color:white"><strong>Dancing Couple</strong><h1>
+        <h1 style="color:white"><strong>Dancing Couple</strong></h1>
         <p style="color:white;" class="demo2">
         <strong>Artist:</strong> William Kentridge (South African, b. 1955)<br>
         <strong>Date:</strong>	2003<br>
@@ -344,7 +344,7 @@
            <div class="mySlides3" style="background-color:black;">
               <div class="numbertext">1 / 4</div>
               <img src="../image/DinahWashington.jpg" alt="Dinah Washington" style="width:50%" class="center">
-              <h1 style="color:white"><strong>Dinah Washington</strong><h1>
+              <h1 style="color:white"><strong>Dinah Washington</strong></h1>
               <p style="color:white;" class="demo3">
               <strong>Artist:</strong> Archie Rand (American, b.1949)<br>
               <strong>Date:</strong>		1970<br>
@@ -362,7 +362,7 @@
           <div class="mySlides3" style="background-color:black;">
               <div class="numbertext">2 / 4</div>
               <img src="../image/BigPaint.jpg" alt="Wall" style="width:50%" class="center">
-              <h1 style="color:white"><strong>Wall</strong><h1>
+              <h1 style="color:white"><strong>Wall</strong></h1>
               <p style="color:white;" class="demo3">
               <strong>Artist:</strong> Slava Polishchuk (Russian (Immigrated to the United States in 1996), b. 1961)<br>
               <strong>Date:</strong>		2002<br>
@@ -406,7 +406,7 @@
           <div class="mySlides3" style="background-color:black;">
               <div class="numbertext">4 / 4</div>
               <img src="../image/Cones.jpg" alt="Cones" style="width:50%" class="center">
-              <h1 style="color:white"><strong>Cones</strong><h1>
+              <h1 style="color:white"><strong>Cones</strong></h1>
               <p style="color:white;" class="demo3">
               <strong>Artist:</strong> 	A. Dodina, S. Polishchuk (Russian)<br>
               <strong>Date:</strong>			2003<br>
