--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -216,6 +216,11 @@
         <strong>Location:</strong>	First floor<br>
         <strong>Provenance:</strong>	The Brooklyn College Library Collection. © Artist's Estate
         </p>
+        <!--Audio-->
+        <audio controls>
+        <source src="RAdams.ogg" type="audio/ogg">
+        <source src="RAdams.mp3" type="audio/mpeg">
+        </audio>
         <!-- Description -->
         <p class="demo2" style="color:white"><br><br><br>
         The Brooklyn College Library Collection. © Artist's Estate<br><br>
