--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <a href= "directory/laguardia_hall_library.html">
         <img src="image/Typewriter.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
-          <h3>Typewriter</h3>
-          <p>William Kentridge<br>1st Floor</p>
+          <h3>The Wallabout Market</h3>
+          <p>R.Adams<br>1st Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
