--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/Typewriter.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/Wallabout.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>The Wallabout Market</h3>
           <p>R.Adams<br>1st Floor</p>
@@ -62,18 +62,18 @@
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/RiversEdge.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/VegetableField.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
-          <h3>River's Edge</h3>
-          <p>Jim Lee<br>4th Floor</p>
+          <h3>Vegetable Fields</h3>
+          <p>Xu Bing<br>4th Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
         <img src="image/Neptune.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
-          <h3>Neptune(detail);Bailey Fountain,Brooklyn,NY</h3>
-          <p>Richard Lord<br>Basement</p>
+          <h3>Bird of the Woods or Bird XVII</h3>
+          <p>Georges Braque<br>4th Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
