--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/VegetableField.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/VegetableFields.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Vegetable Fields</h3>
           <p>Xu Bing<br>4th Floor</p>
@@ -70,7 +70,7 @@
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/Neptune.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/BirdoftheWoodsorBirdXVII.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Bird of the Woods or Bird XVII</h3>
           <p>Georges Braque<br>4th Floor</p>
