--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
       </div>
        <div class="carousel-item">
          <a href= "directory/laguardia_hall_library.html">
-         <img src="image/MusicalMermaid.jpg" alt="comingSoon" style="width:50%;"></a>
+         <img src="image/CelestialSpheres.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
-          <h3>The Musical Mermaid</h3>
-          <p>Anthony G. Gennarelli<br>Basement</p>
+          <h3>Celestial Spheres</h3>
+          <p>Elizabeth Delson<br>Basement</p>
         </div>   
       </div>
     </div>
