--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/DancingCouple.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/RedTowel.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Dancing Couple</h3>
           <p>William Kentridge<br>1st Floor</p>
